err/django-dockitcms.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_dockitcms-0.0.11.egg-info'...
Listing './lib/python3.5/site-packages/dockitcms'...
Listing './lib/python3.5/site-packages/dockitcms/contrib'...
Listing './lib/python3.5/site-packages/dockitcms/contrib/dockit_admin_tools'...
Listing './lib/python3.5/site-packages/dockitcms/contrib/formviewpoint'...
Listing './lib/python3.5/site-packages/dockitcms/contrib/thumbnailfield'...
Listing './lib/python3.5/site-packages/dockitcms/loading'...
Compiling './lib/python3.5/site-packages/dockitcms/mixins.py'...
***   File "./lib/python3.5/site-packages/dockitcms/mixins.py", line 35
    print kwargs
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dockitcms/models'...
Compiling './lib/python3.5/site-packages/dockitcms/models/mixin.py'...
***   File "./lib/python3.5/site-packages/dockitcms/models/mixin.py", line 21
    except Exception, error:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockitcms/models/view_point.py'...
***   File "./lib/python3.5/site-packages/dockitcms/models/view_point.py", line 123
    print error
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dockitcms/pagecollection'...
Listing './lib/python3.5/site-packages/dockitcms/resources'...
Compiling './lib/python3.5/site-packages/dockitcms/resources/old_public.py'...
***   File "./lib/python3.5/site-packages/dockitcms/resources/old_public.py", line 332
    raise LinkNotAvailable, 'Link unavailable: detail'
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockitcms/sites.py'...
***   File "./lib/python3.5/site-packages/dockitcms/sites.py", line 66
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dockitcms/templates'...
Listing './lib/python3.5/site-packages/dockitcms/templates/admin'...
Listing './lib/python3.5/site-packages/dockitcms/templates/admin/dockitcms'...
Listing './lib/python3.5/site-packages/dockitcms/templates/admin/dockitcms/viewpoint'...
Listing './lib/python3.5/site-packages/dockitcms/templates/dockitcms'...
Listing './lib/python3.5/site-packages/dockitcms/templates/dockitcms/scaffold'...
Listing './lib/python3.5/site-packages/dockitcms/templates/dockitcms/templatetags'...
Listing './lib/python3.5/site-packages/dockitcms/templatetags'...
Listing './lib/python3.5/site-packages/dockitcms/tests'...
Listing './lib/python3.5/site-packages/dockitcms/tests/viewpoints'...
Listing './lib/python3.5/site-packages/dockitcms/viewpoints'...
Compiling './lib/python3.5/site-packages/dockitcms/viewpoints/datepoint.py'...
***   File "./lib/python3.5/site-packages/dockitcms/viewpoints/datepoint.py", line 131
    print 'enabled for', field
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dockitcms/viewpoints/forms.py'...
***   File "./lib/python3.5/site-packages/dockitcms/viewpoints/forms.py", line 14
    except TemplateSyntaxError, e:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockitcms/viewpoints/views.py'...
***   File "./lib/python3.5/site-packages/dockitcms/viewpoints/views.py", line 30
    except HttpException, error:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dockitcms/widgetblock'...
Listing './lib/python3.5/site-packages/dockitcms/widgetblock/templates'...
Listing './lib/python3.5/site-packages/dockitcms/widgetblock/templates/widgetblock'...
Listing './lib/python3.5/site-packages/dockitcms/widgetblock/templatetags'...
Listing './lib/python3.5/site-packages/dockitcms/widgetblock/tests'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
